# pneuma-data-warehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: ingest_pneuma.py  transform_pneuma.py
airflow/include/: assets.py
dbt/dwh/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/dwh/macros/: generate_schema_name.sql  haversine_meters.sql
dbt/dwh/models/marts/: _pneuma_marts_models.yml  agg_speed_by_vehicle_type.sql  dim_track.sql  dim_vehicle_type.sql  fct_trajectory_points.sql
dbt/dwh/models/staging/: _pneuma_models.yml  _pneuma_sources.yml  stg_pneuma_tracks.sql  stg_pneuma_trajectory_points.sql
dbt/dwh/tests/: assert_max_speed_within_bounds.sql  assert_no_negative_delta_distance.sql
docs/: architecture.md  challenge-brief.docx  dashboards.md
docs/decisions/: README.md
infra/: docker-compose.yml
infra/airflow/: Dockerfile  requirements.txt
infra/minio/: bucket-init.sh
infra/postgres/: init.sh
ingest/: ddl.py  loader.py  parser.py  pipeline.py  s3.py
tests/: conftest.py  test_loader.py  test_parser.py
tests/fixtures/: sample_pneuma.csv
