[project]
name = "pneuma-data-warehouse"
version = "0.1.0"
description = "Production-grade ELT data warehouse for pNEUMA vehicle-trajectory data (drone-recorded Athens traffic). Built on Postgres, Airflow, dbt, Metabase, and MinIO."
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.0",
    "pre-commit>=3.7",
    "sqlfluff>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "airflow/logs",
    "dbt/**/target",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
